k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: portfolio-service
  namespace: portfolio

spec:
  selector:
    app: portfolio

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

  type: ClusterIP
